Connection class can now connect to the server. Set up the methods to send proper messages to the server.

--- a/BittleOptions/nbproject/project.properties
+++ b/BittleOptions/nbproject/project.properties
@@ -1,2 +1,7 @@
+file.reference.jetty-io-9.3.8.v20160314.jar=release/modules/ext/jetty-io-9.3.8.v20160314.jar
+file.reference.jetty-util-9.3.8.v20160314.jar=release/modules/ext/jetty-util-9.3.8.v20160314.jar
+file.reference.websocket-api-9.3.8.v20160314.jar=release/modules/ext/websocket-api-9.3.8.v20160314.jar
+file.reference.websocket-client-9.3.8.v20160314.jar=release/modules/ext/websocket-client-9.3.8.v20160314.jar
+file.reference.websocket-common-9.3.8.v20160314.jar=release/modules/ext/websocket-common-9.3.8.v20160314.jar
 javac.source=1.8
 javac.compilerargs=-Xlint -Xlint:-serial
