--- a/BittleOptions/src/org/bittle/beansmod/Bundle.properties
+++ b/BittleOptions/src/org/bittle/beansmod/Bundle.properties
@@ -30,6 +30,6 @@ BittlePanel.CurrentDirectoryLabel.text=Current Bittle Directory
 BittlePanel.CurrentDirectoryField.text=
 BittlePanel.DoneLabel.text=Done with Bittle?
 BittlePanel.LogOutButton.text=Log Out
-BittleTreeTopComponent.jLabel4.text=\uff08\u256f\u00b0\u25a1\u00b0\uff09\u256f\ufe35(\\ .o.)\\
 BittleTreeTopComponent.jLabel1.text=You Need To Be Logged In!
-BittleTreeTopComponent.jLabel2.text=To Log In, Go to Tools > Options > Bittle
+BittleTreeTopComponent.jLabel4.text=\uff08\u256f\u00b0\u25a1\u00b0\uff09\u256f\ufe35(\\ .o.)\\
+BittleTreeTopComponent.OpenOptionsButton.text=Take me to the Login Screen!
