Reworked Bittle Tree Tree can now have files dynamically added to it Tree composed of strings of file names instead of file objects Added SyncList class which holds HashSet of files being synced SyncList will also deal with maintaining contents of bittle folder This allows folder/hashset/tree to have 1 to 1 correspondence Reworked tree pop up, separated it into it's own class

--- a/BittleOptions/src/org/bittle/beansmod/Bundle.properties
+++ b/BittleOptions/src/org/bittle/beansmod/Bundle.properties
@@ -30,6 +30,7 @@ BittlePanel.CurrentDirectoryLabel.text=Current Bittle Directory
 BittlePanel.CurrentDirectoryField.text=
 BittlePanel.DoneLabel.text=Done with Bittle?
 BittlePanel.LogOutButton.text=Log Out
-BittleTreeTopComponent.jLabel1.text=You Need To Be Logged In!
-BittleTreeTopComponent.jLabel4.text=\uff08\u256f\u00b0\u25a1\u00b0\uff09\u256f\ufe35(\\ .o.)\\
-BittleTreeTopComponent.OpenOptionsButton.text=Take me to the Login Screen!
+BittleTreeTopComponent.addButton.text=Add File
+BittleTreeTopComponent.FlipGuy.text=\uff08\u256f\u00b0\u25a1\u00b0\uff09\u256f\ufe35(\\ .o.)\\
+BittleTreeTopComponent.NotLoggedInMessage.text=You Need To Be Logged In!
+BittleTreeTopComponent.ToOptionsButton.text=Take Me To The Login Screen!
