NOTE: Added depedency on minimal-json library for parsing JSON You need to add the JAR to the libraries folder for it to work Got tree popups working Set up switch statement for recieving messages through the server

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,5 @@
 modules=\
-    ${project.org.bittle.optons}
+    ${project.org.bittle.optons}:\
+    ${project.org.minimal.json}
 project.org.bittle.optons=BittleOptions
+project.org.minimal.json=../minimal-json
