Attempt 2 at sucessully pushing the JSON parsing library

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -2,4 +2,4 @@ modules=\
     ${project.org.bittle.optons}:\
     ${project.org.minimal.json}
 project.org.bittle.optons=BittleOptions
-project.org.minimal.json=../minimal-json
+project.org.minimal.json=minimal-json
