did stuff, too tired to say what

--- a/BittleOptions/src/org/bittle/beansmod/Bundle.properties
+++ b/BittleOptions/src/org/bittle/beansmod/Bundle.properties
@@ -18,7 +18,7 @@ AccountPanel.jMenu1.text=jMenu1
 AccountPanel.jTextField1.text=
 AccountPanel.jPasswordField1.text=
 BittlePanel.LoginLabel.text=Log In
-BittlePanel.BrowseButton.text=Browse...
+BittlePanel.BrowseButton.text=Change...
 BittlePanel.UsernameLabel.text=Username
 BittlePanel.PasswordLabel.text=Password
 BittlePanel.UsernameField.text=
@@ -34,3 +34,4 @@ BittleTreeTopComponent.addButton.text=Add File
 BittleTreeTopComponent.FlipGuy.text=\uff08\u256f\u00b0\u25a1\u00b0\uff09\u256f\ufe35(\\ .o.)\\
 BittleTreeTopComponent.NotLoggedInMessage.text=You Need To Be Logged In!
 BittleTreeTopComponent.ToOptionsButton.text=Take Me To The Login Screen!
+BittlePanel.BrowseButton.toolTipText=Choose a different directory for your Bittle Folder
