Added wrapped JSON library.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,3 @@
 modules=\
-    ${project.org.bittle.optons}:\
-    ${project.org.minimal.json}
+    ${project.org.bittle.optons}
 project.org.bittle.optons=BittleOptions
-project.org.minimal.json=minimal-json
