--- a/BittleOptions/nbproject/project.properties
+++ b/BittleOptions/nbproject/project.properties
@@ -1,5 +1,6 @@
 file.reference.jetty-io-9.3.8.v20160314.jar=release/modules/ext/jetty-io-9.3.8.v20160314.jar
 file.reference.jetty-util-9.3.8.v20160314.jar=release/modules/ext/jetty-util-9.3.8.v20160314.jar
+file.reference.minimal-json-0.9.4.jar=release/modules/ext/minimal-json-0.9.4.jar
 file.reference.websocket-api-9.3.8.v20160314.jar=release/modules/ext/websocket-api-9.3.8.v20160314.jar
 file.reference.websocket-client-9.3.8.v20160314.jar=release/modules/ext/websocket-client-9.3.8.v20160314.jar
 file.reference.websocket-common-9.3.8.v20160314.jar=release/modules/ext/websocket-common-9.3.8.v20160314.jar
