--- a/BittleOptions/src/org/bittle/beansmod/Bundle.properties
+++ b/BittleOptions/src/org/bittle/beansmod/Bundle.properties
@@ -17,14 +17,7 @@ AccountPanel.jButton1.text=Log In
 AccountPanel.jMenu1.text=jMenu1
 AccountPanel.jTextField1.text=
 AccountPanel.jPasswordField1.text=
-BittlePanel.LoginLabel.text=Log In
 BittlePanel.BrowseButton.text=Change Directory...
-BittlePanel.UsernameLabel.text=Username
-BittlePanel.PasswordLabel.text=Password
-BittlePanel.UsernameField.text=
-BittlePanel.PasswordField.text=
-BittlePanel.LoginButton.text=Log In
-BittlePanel.RegisterCheckbox.text=Create an Account
 BittlePanel.LoggedInLabel.text=Hey There
 BittlePanel.CurrentDirectoryLabel.text=Current Bittle Directory
 BittlePanel.CurrentDirectoryField.text=
@@ -42,3 +35,16 @@ BittlePanel.ChangePassButton.text=Change Password
 BittlePanel.currPassField.text=
 BittlePanel.newPassField.text=
 BittleTreeTopComponent.RemoveAllButton.text=Remove All Files
+BittlePanel.LoginButton.text=Log In
+BittlePanel.PasswordLabel.text=Password
+BittlePanel.UsernameLabel.text=Username
+BittlePanel.LoginLabel.text=Log In
+BittlePanel.RegisterLabel.text=Sign Up
+BittlePanel.PasswordLabel1.text=Password
+BittlePanel.UsernameLabel1.text=Username
+BittlePanel.RegisterButton.text=Sign Up
+BittlePanel.LoginUserField.text=
+BittlePanel.LoginPassField.text=
+BittlePanel.SignupUserField.text=
+BittlePanel.SignupPassField.text=
+BittleTreeTopComponent.OptionsButton.text=Options
