Added Confirm Password Fields Added Notification on client removal

--- a/BittleOptions/src/org/bittle/beansmod/Bundle.properties
+++ b/BittleOptions/src/org/bittle/beansmod/Bundle.properties
@@ -48,3 +48,8 @@ BittlePanel.LoginPassField.text=
 BittlePanel.SignupUserField.text=
 BittlePanel.SignupPassField.text=
 BittleTreeTopComponent.OptionsButton.text=Options
+BittlePanel.PasswordLabel2.text=Confirm
+BittlePanel.PasswordLabel3.text=Password
+BittlePanel.SignupConfirmField.text=
+BittlePanel.ConfirmPassField.text=
+BittlePanel.NewPassLabel1.text=Confirm Password
